# DocProcessorPro-REP

DocProcessorPro/: build.ps1  llm_extraction_schema.md  pyproject.toml  requirements.txt
DocProcessorPro/src/DocProcessorPro/: DocProcessorPro.py  _dedup.py  _gui_utils.py  _llm_client.py  _review_dialog.py  _scanner_dialog.py  _workers.py  resources_rc.py
DocProcessorPro/src/DocProcessorPro/dpp_scripts/file_management_scripts/: file_management_codebase.py
DocProcessorPro/src/DocProcessorPro/dpp_scripts/gui_files/: resources.qrc  resources_rc.py
DocProcessorPro/src/DocProcessorPro/dpp_scripts/keyword_scanner_scripts/: categories.py  extraction.py  keyword_scanner_codebase.py  keyword_scanner_main.py  models.py  pdf_ops.py
DocProcessorPro/src/DocProcessorPro/dpp_scripts/update_scripts/: update_codebase.py
DocProcessorPro/src/DocProcessorPro/logging_resources/: log_context.py  logging_config.yaml
DocProcessorPro/src/data/: training.jsonl
